# BeneathTheSurface

./: CMakeLists.txt  vcpkg.json
game/: CMakeLists.txt
game/include/: Game.h
game/include/entites/: Player.h
game/include/graphics/: Camera.h  Model.h  Shader.h  Texture.h  Window.h
game/include/math/: AABB.h  Polygon.h  SAT.h
game/include/tiles/: TestTile.h
game/include/update/: GameStartupUpdateCheck.h
game/include/util/: Entity.h  GameStartupUpdateCheck.h  Input.h  Scene.h  Tile.h  Time.h  mouse_look.h
game/resources/shaders/fragment/: shader.frag
game/resources/shaders/vertex/: shader.vert
game/src/: Game.cpp  main.cpp
game/src/entities/: Player.cpp
game/src/graphics/: Shader.cpp  Texture.cpp  Window.cpp
game/src/math/: Polygon.cpp
game/src/tiles/: TestTile.cpp
game/src/update/: GameStartupUpdateCheck.cpp
game/src/util/: GameStartupUpdateCheck.cpp  Scene.cpp
updater/: CMakeLists.txt  updater.manifest  version.rc
updater/include/: Updater.h
updater/src/: Updater.cpp  main_updater.cpp
